# src/server/server.ts
@@ -5,6 +5,7 @@ import mongoose from "mongoose";
 import swaggerUi from "swagger-ui-express";
 require("dotenv").config({ path: path.join(__dirname, "../../.env") });
 import authRouter from "../auth/auth.router";
+import cardRouter from "../card/card.router";
 const swaggerDocument = require("../../swagger.json");
 
 export default class Server {
@@ -51,6 +52,7 @@ export default class Server {
 
   private initRoutes() {
     this.app.use("/auth", authRouter);
+    this.app.use("/card", cardRouter);
     this.app.use(
       "/api-docs",
       swaggerUi.serve,
@@ -62,7 +64,7 @@ export default class Server {
     this.app.use(
       (err: any, req: Request, res: Response, next: NextFunction): Response => {
         let status = 500;
-        if (err.response.status) {
+        if (err.response) {
           status = err.response.status;
         }
         return res.status(status).send(err.message);
